--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,11 @@
-test.spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 test.spring.datasource.driverClassName=org.h2.Driver
-test.spring.datasource.username=sa
-test.spring.datasource.password=
-test.spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
 test.spring.jpa.hibernate.ddl-auto=create-drop
+server.port=0
+spring.main.allow-bean-definition-overriding=true
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
